2012-11-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/14567
	* binutils-all/ar.exp (bfdtest1): Removed.
	(long_filenames): Take bfdtests.
	(thin_archive): Likewise.
	(thin_archive_with_nested): Likewise.
	(bfdtests): New.
	Pass $bfdtests to long_filenames, thin_archive and
	thin_archive_with_nested.

2012-10-29  Alan Modra  <amodra@gmail.com>

	* binutils-all/copy-3.d: Exclude all cygwin and mingw targets,
	and rs6000.

2012-10-24  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/ar.exp (bfdtest1): Remove findfile.

2012-10-21  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/dw2-1.W: Updated.

2012-10-20  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/compress.exp: Add an objdump test.
	* binutils-all/dw2-1.W: New file.

2012-08-17  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/ar.exp (long_filenames): Remove extra verbose
	before binutils_run.
	(thin_archive): Likewise.
	(thin_archive_with_nested): Likewise.  Also run bfdtest1 on
	$archive2.

2012-08-16  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/14481
	* ar.exp (bfdtest1): New.
	(long_filenames): Run bfdtest1.
	(thin_archive): Likewise.
	(thin_archive_with_nested): Likewise.

2012-08-13  Ian Bolton  <ian.bolton@arm.com>
	    Laurent Desnogues  <laurent.desnogues@arm.com>
	    Jim MacArthur  <jim.macarthur@arm.com>
	    Marcus Shawcroft  <marcus.shawcroft@arm.com>
	    Nigel Stephens  <nigel.stephens@arm.com>
	    Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
	    Richard Earnshaw  <rearnsha@arm.com>
	    Sofiane Naci  <sofiane.naci@arm.com>
	    Tejas Belagod  <tejas.belagod@arm.com>
	    Yufeng Zhang  <yufeng.zhang@arm.com>

	* objdump.exp: Add AArch64.

2012-08-02  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/14420
	* binutils-all/i386/compressed-1a.d: Updated.
	* binutils-all/objdump.W: Likewise.
	* binutils-all/readelf.wa: Likewise.
	* binutils-all/x86-64/compressed-1a.d: Likewise.

2012-07-28  Kai Tietz  <ktietz@redhat.com>

	* binutils-all/windres/version_small.rc: New test.