@@ -1,3 +1,9 @@
+2012-11-27  Roland McGrath  <mcgrathr@google.com>
+
+	* lib/gas-defs.exp (run_dump_test): If as options include
+	--compress-debug-sections and zlib is not available, report
+	the test as unsupported.
+
 2012-11-23  Alan Modra  <amodra@gmail.com>
 
 	* gas/ppc/astest2.d: Pass -Mppc to objdump.
